# nufftax

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: autoformat.yml  ci.yml  release.yml
benchmarks/: bench_gpu_scatter.py  bench_jax_optimizations.py  bench_nufft_comprehensive.py  bench_scatter_strategies.py
docs/: api.rst  concepts.rst  conf.py  index.rst  quickstart.rst  tutorials.rst
docs/_static/: brain_mri.npy
docs/tutorials/: mri_reconstruction.ipynb  poisson_2d.ipynb  sample_optimization.ipynb  spectral_analysis.ipynb
fftax/: __init__.py
fftax/core/: __init__.py  deconvolve.py
fftax/transforms/: nufft2.py
jax_finufft/: __init__.py
jax_finufft/core/: kernel.py  spread.py
jax_finufft/transforms/: __init__.py  autodiff.py  nufft1.py
jax_finufft/utils/: __init__.py
nufftax/: __init__.py
nufftax/core/: __init__.py  deconvolve.py  kernel.py  spread.py
nufftax/transforms/: __init__.py  autodiff.py  nufft1.py  nufft2.py  nufft3.py
tests/: conftest.py  test_adjoint.py  test_dtypes.py  test_edge_cases.py  test_kernel.py  test_nufft1.py  test_nufft2.py  test_nufft3.py  test_spread.py  test_transforms.py
