[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-finufft"
version = "0.1.0"
description = "Pure JAX implementation of FINUFFT (Non-Uniform FFT)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "JAX-FINUFFT Authors"}
]
keywords = ["jax", "fft", "nufft", "non-uniform", "fourier-transform", "autodiff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "finufft>=2.0",  # For comparison testing
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/example/jax-finufft"
Documentation = "https://github.com/example/jax-finufft"
Repository = "https://github.com/example/jax-finufft"

[tool.setuptools.packages.find]
where = ["."]
include = ["jax_finufft*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
