[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nufftax"
version = "0.1.0"
description = "Pure JAX implementation of Non-Uniform FFT"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    {name = "Geoffroy Oudoumanessah", email = "geoffroy.oudoumanesah@gmail.com"}
]
keywords = ["jax", "fft", "nufft", "non-uniform", "fourier-transform", "autodiff"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "finufft>=2.0",  # For comparison testing
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/geoffroyO/nufftax"
Documentation = "https://github.com/geoffroyO/nufftax"
Repository = "https://github.com/geoffroyO/nufftax"

[tool.setuptools.packages.find]
where = ["."]
include = ["nufftax*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
filterwarnings = [
    # Suppress JAX scatter dtype promotion warning - occurs when x64 mode is enabled globally
    # (by test_nufft3.py for FINUFFT comparison) and float32 computations mix with float64 constants.
    # This is a FutureWarning and doesn't affect correctness; dtype promotion is handled correctly.
    "ignore:scatter inputs have incompatible types:FutureWarning",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]
